# MoreStickersManager-rs

./: .dockerignore  .env.development.example  .env.testing.example  .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  README.zh-TW.md  components.json  package-lock.json  package.json
.github/workflows/: ci.yml  docker.yml  prerelease.yml  release.yml
apps/web/: index.html  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/web/e2e/: dashboard.spec.ts
apps/web/src/: App.vue  env.d.ts  styles.css
crates/msm-api/: Cargo.toml
crates/msm-api/src/: asset_urls.rs  auth.rs  dto.rs  error.rs  lib.rs  oidc.rs  openapi.rs  rate_limit.rs  rbac.rs  state.rs
crates/msm-api/src/routes/: assets.rs  auth.rs  exports.rs  health.rs  metadata.rs  mod.rs  packs.rs  pats.rs  portability.rs  provider_configs.rs  provider_imports.rs  subscription_access_tokens.rs  subscriptions.rs  tenants.rs
crates/msm-app/: Cargo.toml  build.rs
crates/msm-app/src/: export_worker.rs  lib.rs  main.rs  provider_import.rs  provider_import_worker.rs
crates/msm-app/tests/: export_worker_tests.rs  provider_import_worker_tests.rs
crates/msm-app/web-dist-placeholder/: index.html
crates/msm-cli/: Cargo.toml
crates/msm-cli/src/: client.rs  command.rs  error.rs  lib.rs  main.rs  output.rs
crates/msm-domain/: Cargo.toml
crates/msm-domain/src/: authz.rs  error.rs  ids.rs  lib.rs  stickerpack.rs  subscription.rs  url.rs
crates/msm-domain/tests/: authorization.rs  compatibility.rs
crates/msm-exporters/: Cargo.toml
crates/msm-exporters/src/: lib.rs  morestickers.rs  registry.rs  target.rs  telegram.rs
crates/msm-exporters/tests/: morestickers_export_tests.rs  registry_tests.rs  telegram_plan_tests.rs
crates/msm-mcp/: Cargo.toml
crates/msm-mcp/src/: handler.rs  lib.rs  protocol.rs  tools.rs
crates/msm-media/: Cargo.toml
crates/msm-media/src/: command.rs  error.rs  lib.rs  plan.rs  probe.rs  profile.rs
crates/msm-media/tests/: command_tests.rs  probe_tests.rs  profile_tests.rs  validation_tests.rs
crates/msm-providers/: Cargo.toml
crates/msm-providers/src/: error.rs  fetch.rs  lib.rs  line.rs  registry.rs  telegram.rs
crates/msm-storage/: Cargo.toml
crates/msm-storage/migrations/: 0008_tenant_local_registration.sql  0013_provider_configs.sql
crates/msm-storage/migrations/postgres/: 0001_initial.sql  0002_local_credentials.sql  0003_export_pipeline.sql  0004_export_job_retries.sql  0007_web_sessions.sql  0008_tenant_local_registration.sql  0009_oidc_provider_configs.sql  0012_provider_import_jobs.sql  0013_provider_configs.sql  0014_disable_local_registration_by_default.sql
crates/msm-storage/migrations/sqlite/: 0001_initial.sql  0003_export_pipeline.sql  0005_telegram_sticker_mappings.sql  0006_subscription_access_tokens.sql  0009_oidc_provider_configs.sql  0010_oidc_login_states_and_links.sql  0011_oidc_nonce_hash.sql  0014_disable_local_registration_by_default.sql
crates/msm-storage/src/: asset.rs  config.rs  db.rs  error.rs  export_jobs.rs  lib.rs  models.rs  portability.rs  repositories.rs
crates/msm-storage/tests/: export_job_repository_tests.rs  product_data_repository_tests.rs
crates/msm-telegram/: Cargo.toml
crates/msm-telegram/src/: bot.rs  lib.rs  publish.rs
crates/msm-telegram/tests/: bot_tests.rs  publish_tests.rs
docs/: PRD.md
docs/agents/: README.md  compatibility.md  project-map.md  status-protocol.md  testing.md
docs/dev/: architecture.md  compatibility.md  mcp-transport-contract.md  providers.md
docs/integrations/: equicord-morestickers-msm-adapter-patch.md  equicord-morestickers-msm-adapter.md
docs/integrations/patches/: equicord-morestickers-msm-adapter.patch
docs/status/: checkpoints.md  completion-audit.md  current.md  decisions.md  implementation-matrix.md  roadmap.md  security-review.md
docs/superpowers/plans/: 2026-05-02-msm-p0-p1-foundation.md  2026-05-02-msm-p2-storage-asset-core.md  2026-05-02-msm-p3-authorization-domain.md  2026-05-02-msm-p4-api-openapi-slice.md  2026-05-03-msm-p10-embedded-web-assets.md  2026-05-03-msm-p5-cli-client.md  2026-05-03-msm-p6-provider-interface.md  2026-05-03-msm-p7-web-ui-foundation.md  2026-05-03-msm-p8-web-api-client.md  2026-05-03-msm-p9-service-binary.md  2026-05-04-msm-p11-mcp-endpoint.md  2026-05-04-msm-p12-pat-foundation.md  2026-05-04-msm-p13-pat-management-api.md  2026-05-04-msm-p14-cli-pat-commands.md  2026-05-04-msm-p15-api-mcp-pat-enforcement.md  2026-05-04-msm-p16-web-pat-management.md  2026-05-04-msm-p17-github-actions-release-docker.md  2026-05-04-msm-p18-local-auth-bootstrap.md  2026-05-04-msm-p19-web-local-login.md  2026-05-04-msm-p20-admin-bootstrap-policy.md  2026-05-04-msm-p21-pack-crud-foundation.md  2026-05-04-msm-p22-web-pack-crud-controls.md  2026-05-04-msm-p23-web-pack-import.md  2026-05-06-msm-telegram-export-pipeline.md  2026-05-07-msm-telegram-publication-api.md  2026-05-07-msm-telegram-publication-cli.md  2026-05-07-msm-telegram-publication-execution.md  2026-05-07-msm-telegram-publication-repository.md  2026-05-07-msm-telegram-publication-worker-persistence.md  2026-05-09-msm-product-data-api.md
docs/superpowers/specs/: 2026-05-02-msm-p2-storage-asset-core-design.md  2026-05-02-msm-p3-authorization-domain-design.md  2026-05-02-msm-p4-backend-api-openapi-design.md  2026-05-02-msm-platform-roadmap-foundation-design.md  2026-05-03-msm-p10-embedded-web-assets-design.md  2026-05-03-msm-p5-cli-client-design.md  2026-05-03-msm-p6-provider-interface-design.md  2026-05-03-msm-p7-web-ui-foundation-design.md  2026-05-03-msm-p8-web-api-client-design.md  2026-05-03-msm-p9-service-binary-design.md  2026-05-04-msm-p11-mcp-endpoint-design.md  2026-05-04-msm-p12-pat-foundation-design.md  2026-05-04-msm-p13-pat-management-api-design.md  2026-05-04-msm-p14-cli-pat-commands-design.md  2026-05-04-msm-p15-api-mcp-pat-enforcement-design.md  (+6 more)
docs/user/: README.md  backup-restore-runbook.md  oidc-sso.md  telegram-reconciliation-runbook.md
examples/docker/: .env.example  README.md  docker-compose.yml
scripts/: dev-manager.mjs
(+40 files in other folders)
