[workspace]
members = [
    "crates/msm-domain",
    "crates/msm-storage",
    "crates/msm-api",
    "crates/msm-cli",
    "crates/msm-providers",
    "crates/msm-media",
    "crates/msm-app",
    "crates/msm-mcp",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lekoOwO/MoreStickersManager-rs"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
