[package]
name = "msm-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum = { version = "0.8", features = ["json"] }
http-body-util = "0.1"
mime_guess = "2"
msm-domain = { path = "../msm-domain" }
msm-exporters = { path = "../msm-exporters" }
msm-storage = { path = "../msm-storage" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
utoipa = { version = "5", features = ["axum_extras"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
