[package]
name = "msm-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum = { version = "0.8", features = ["json"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
http-body-util = "0.1"
mime_guess = "2"
msm-domain = { path = "../msm-domain" }
msm-exporters = { path = "../msm-exporters" }
msm-providers = { path = "../msm-providers" }
msm-storage = { path = "../msm-storage" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
ring = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
utoipa = { version = "5", features = ["axum_extras"] }
url = "2"

[dev-dependencies]
rsa = "0.9"
sha2 = { version = "0.10", features = ["oid"] }
tempfile = "3"

[lints]
workspace = true
