[package]
name = "msm-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum = "0.8"
bytes = "1"
include_dir = "0.7"
mime_guess = "2"
msm-api = { path = "../msm-api" }
msm-domain = { path = "../msm-domain" }
msm-exporters = { path = "../msm-exporters" }
msm-mcp = { path = "../msm-mcp" }
msm-storage = { path = "../msm-storage" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time"] }

[lints]
workspace = true
