[package]
name = "msm-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum = "0.8"
bytes = "1"
chrono = "0.4"
getrandom = "0.3"
include_dir = "0.7"
mime_guess = "2"
msm-api = { path = "../msm-api" }
msm-domain = { path = "../msm-domain" }
msm-exporters = { path = "../msm-exporters" }
msm-media = { path = "../msm-media" }
msm-mcp = { path = "../msm-mcp" }
msm-providers = { path = "../msm-providers" }
msm-storage = { path = "../msm-storage" }
msm-telegram = { path = "../msm-telegram" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
teloxide = { version = "0.17.0", default-features = false, features = ["rustls"] }
thiserror = "2"
tokio = { version = "1", features = ["fs", "macros", "process", "rt-multi-thread", "net", "time"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
