[package]
name = "msm-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "msm"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
msm-domain = { path = "../msm-domain" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
url = "2"

[lints]
workspace = true
