[package]
name = "msm-exporters"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
msm-domain = { path = "../msm-domain" }
msm-media = { path = "../msm-media" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
teloxide = { version = "0.17.0", default-features = false, features = ["rustls"] }
thiserror = "2"

[lints]
workspace = true
