[package]
name = "msm-mcp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum = { version = "0.8", features = ["json"] }
msm-api = { path = "../msm-api" }
msm-domain = { path = "../msm-domain" }
msm-storage = { path = "../msm-storage" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }

[lints]
workspace = true
