[package]
name = "msm-telegram"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
teloxide = { version = "0.17.0", default-features = false, features = ["rustls"] }
thiserror = "2"
url = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
